# kyt-entity-registry

./: .gitignore  .validator_known_dups.txt  .validator_known_semantic.txt  CLAUDE.md  LICENSE  README.md  TODOS.md  audit.html  dn_snapshot.json  entities.csv  gallery.css  gallery.js  index.html  kyt-registry-rework-2026-04-23 (1).csv  kyt-registry-rework-2026-04-23.csv  landing.css  landing.js  llms.txt  lookup.js  manifest.json  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: enrich-logos.yml  refresh-dn-snapshot.yml  security.yml  validate.yml
docs/: CONSUMERS.md  DESIGN.md  MCP.md  PROVIDERS.md  T8_MIGRATE_CONSUMERS.md
logos/: _index.json  _lookup.json
logos/_fallback/: README.md
mcp/: README.md
mcp/python/: README.md  pyproject.toml
mcp/python/src/kyt_entity_registry_mcp/: __init__.py  server.py
mcp/ts/: README.md  package.json  tsconfig.json
mcp/ts/src/: index.ts
scripts/: README.md  _base.py  _oneshot_post_pr4_cleanup.py  _oneshot_recat_hack_victims.py  _oneshot_stablecoin_issuer_logos.py  build_lookup.py  build_og_preview.py  discover_from_defillama.py  enrich.py  enrich_from_arkham.py  enrich_from_brandfetch.py  enrich_from_defillama.py  enrich_from_favicon.py  enrich_from_playwright.py  generate_manifest.py  normalize_png.py  refresh_dn_snapshot.py  rework_from_report.py  seed_keywords_from_defillama.py  seed_registry_keywords.py  validate_manifest.py
tests/: test_base_path_guard.py  test_brandfetch_domain.py  test_enrich_favicon_guard.py
