[project]
name = "kyt-entity-registry-mcp"
version = "0.1.0"
description = "MCP server for kyt-entity-registry — resolves crypto entity logos by freeform label"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "maslovsa" }]
keywords = ["mcp", "model-context-protocol", "claude", "crypto", "kyt", "aml", "logos"]

dependencies = [
    # Official MCP Python SDK. stdio transport bundled.
    "mcp>=1.2,<2",
    # Same httpx pin as the parent registry so pip-audit findings
    # converge.
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/maslovsa/kyt-entity-registry"
Repository = "https://github.com/maslovsa/kyt-entity-registry"

[project.scripts]
kyt-entity-registry-mcp = "kyt_entity_registry_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kyt_entity_registry_mcp"]
